enforce min-height to prevent elements from going off-screen

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ button {
 
 #body {
     width: 375px;
+    min-height: 600px;
 
     display: flex;
     flex-direction: column;
